# Stock-Analysis

./: stack.yaml  stockanalysis.cabal
src/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
