
name:                stockanalysis
version:             0.1.0.0
author:              Bradley Heather
maintainer:          bradleymheather@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable stockanalysis
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
      Charts
      HtmlReport
      Params
      QuoteData
      StatReport
  other-extensions: RecordWildCards OverloadedStrings DeriveGeneric DeriveAnyClass
  ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  build-depends:
      base  >=4.12 && <4.15
    , Chart >=1.8 && <1.10
    , Chart-diagrams >=1.8 && <1.10
    , base >=4.12 && <4.15
    , blaze-colonnade >=1.1 && <1.3
    , blaze-html >=0.9 && <0.10
    , bytestring >=0.10 && <0.12
    , cassava >=0.5 && <0.6
    , colonnade >=1.1 && <1.3
    , fmt >=0.5 && <0.7
    , optparse-applicative >=0.14 && <0.17
    , text >=1.2 && <1.3
    , time >=1.8 && <1.12
  default-language: Haskell2010              